--- a/modules/documents/client/views/partials/modal-document-link.html
+++ b/modules/documents/client/views/partials/modal-document-link.html
@@ -1,9 +1,10 @@
 
 <div class="modal-header">
+	<button type="button" class="btn btn-default close" ng-click="docLinkModal.cancel()"><span aria-hidden="true">&times;</span></button>
 	<!-- MEM -->
 	<h3 ng-if="!docLinkModal.docLocationCode" class="modal-title">Link Documents</h3>
 	<!-- EAO -->
-	<h3 ng-if="docLinkModal.docLocationCode" class="modal-title">Link Documents: {{docLinkModal.artifact.name}} ({{docLinkModal.docLocationCode | displayFriendlyCode}})</h3>
+	<h3 ng-if="docLinkModal.docLocationCode" class="modal-title">Link Documents &nbsp;&rsaquo;&nbsp; {{docLinkModal.artifact.name}} ({{docLinkModal.docLocationCode | displayFriendlyCode}})</h3>
 </div>
 
 <div class="modal-body">
