ESM-487 - Print View for Packages
- Fixed an issue where the decision package was still showing this functionality.

--- a/modules/artifacts/client/views/artifact-display.html
+++ b/modules/artifacts/client/views/artifact-display.html
@@ -67,7 +67,7 @@
                 <h2>Main Document</h2>
                 <div class="actions">
                     <button class="btn btn-default btn-sm"
-                        ng-if="(artifact.typeCode !== 'referral-package') && (artifact.typeCode !== 'decision')"
+                        ng-if="(artifact.typeCode !== 'referral-package') && (artifact.typeCode !== 'decision-package')"
                         onclick="window.print()" title="Print Document">
                         <span class="glyphicon glyphicon-print"></span><span>Print Document</span>
                     </button>
