--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -124,7 +124,7 @@
 					x-project="docBrowser.project"
            			x-artifact="docBrowser.artifact"
            			x-doc-location-code="docBrowser.docLocationCode"
-					ng-if="docBrowser.project.userCan.uploadDocument && environment === 'EAO'"><span class="glyphicon glyphicon-open"></span><span>Upload Documents</span></a>
+					ng-if="docBrowser.project.userCan.createDocument && environment === 'EAO'"><span class="glyphicon glyphicon-open"></span><span>Upload Documents</span></a>
 				<a href class="btn btn-default btn-sm"
 					x-modal-document-upload-classify-mem
 					x-project="docBrowser.project"
