--- a/modules/vcs/client/views/vc-list.html
+++ b/modules/vcs/client/views/vc-list.html
@@ -14,31 +14,31 @@
 	<div class="panel panel-default">
 		<table ng-table="tableParams" show-filter="true" class="table table-hover vc-table">
 			<tr ng-repeat="o in $data" ui-sref="p.vc.detail({vcId:o._id})">
-				<td data-title="'Title'" 
-					filter="{'title':'text'}" 
+				<td data-title="'Title'"
+					filter="{'title':'text'}"
 					sortable="'title'">
 					<a ui-sref="p.vc.detail({vcId:o._id})">{{o.title}}</a>
 				</td>
-				<td data-title="'Name'" 
-					filter="{'name':'text'}" 
+				<td data-title="'Name'"
+					filter="{'name':'text'}"
 					sortable="'name'">{{o.name}}</td>
-				<td data-title="'Pillar'" 
-					filter="{'pillar':'text'}" 
+				<td data-title="'Pillar'"
+					filter="{'pillar':'text'}"
 					sortable="'pillar'">{{o.pillar}}</td>
-				<td data-title="'Type'" 
-					filter="{'type':'text'}" 
+				<td data-title="'Type'"
+					filter="{'type':'text'}"
 					sortable="'type'" >{{o.type}}</td>
-				<td class="status-col" header-class="'status-col'" 
-					ng-if="authentication.user" 
-					data-title="'Status'" 
+				<td class="status-col" header-class="'status-col'"
+					ng-if="authentication.user"
+					data-title="'Status'"
 					sortable="'artifact.isPublished'">
 					<span class="label label-success" ng-if="o.artifact.isPublished">Published</span>
 					<span class="label unpublished" ng-if="!o.artifact.isPublished">Unpublished</span>
 				</td>
 				<td class="actions-col action-x2" header-class="'actions-col action-x2'">
 					<a class="btn btn-default btn-sm" title="Edit Valued Component"
-						ng-if="project.userCan.createValuedComponent" 
-						ng-click="$event.stopPropagation()" 
+						ng-if="o.userCan.write"
+						ng-click="$event.stopPropagation()"
 						ui-sref="p.vc.edit({vcId:o._id})">
 						<span class="glyphicon glyphicon-pencil"></span>
 					</a>
