--- a/modules/artifacts/client/views/artifact-notify.html
+++ b/modules/artifacts/client/views/artifact-notify.html
@@ -2,6 +2,10 @@
 	<h1>Notify Contacts <span>&nbsp;&rsaquo;&nbsp; {{artifact.name}}</h1>
 	<div class="actions">
 		<a class="btn btn-default btn-sm" ui-sref="p.detail">Cancel</a>
+		<button class="btn btn-success btn-sm"
+				title="Update (Re-publish)"
+				ng-if="artifact.isPublished"
+				ng-click="update()">Update</button>
 		<a class="btn btn-primary btn-sm" href ng-click="saveProcess()">Save</a>
 		<a class="btn btn-success btn-sm" href ng=click="submit()" ng-show="form.curTab === 'Recipients' && status === 'pending' && dateQueued">Add to Queue</a>
 	</div>
