--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -53,6 +53,12 @@ $left-panel-bg:				#FFF;
 $left-panel-shadow-width:	0.4rem;
 $left-panel-shadow-color:	#999;
 
+
+/* Map Popup */
+$map-popup-title-font-size:	1.8rem;
+$map-popup-body-font-size:	1.2rem;
+
+
 /* Modal */
 $modal-body-bg: 			#f1f1f1;
 $modal-header-bg: 			#FFF;
@@ -2325,7 +2331,6 @@ $sidenav-text-shadow: 0 0 2px #FFF;
 
 .label {
 	display: inline-block;
-	padding: 0.3rem;
 	padding-top: 0.35rem;
 	font-size: 1.2rem;
 	font-weight: normal;
@@ -3770,17 +3775,6 @@ section {
 	}
 }
 
-.comment-vcs {
-	.tag-list {
-		margin-bottom: 0.5rem;
-		
-		.label {
-			margin-right: 0.2rem;
-			background: #999;
-		}
-	}
-}
-
 .open-house {
 	margin-top: -0.5rem;
 
@@ -4754,37 +4748,48 @@ section.project-info {
 
 /* MAP
 ------------------------------ */
-.map-info-popup {
+
+
+.map-popup {
 	max-width: 30rem;
-	min-height: 10rem;
-	font-size: 1.4rem;
 	font-family: $font-family-sans-serif;
 
 	h3 {
 		margin-top: 0.5rem;
 		margin-bottom: 1rem;
-		font-size: 2rem;
+		font-size: $map-popup-title-font-size;
 		font-weight: bold;
 	}
 
-	.project-desc,
-	.public-comment-btn {
-		margin-bottom: 1.5rem;
+	.map-popup-content,
+	.map-popup-type,
+	.map-popup-links {
+		font-size: $map-popup-body-font-size;	
 	}
 
-	.project-type {
-		display: inline-block;
+	.map-popup-content {
+		max-height: 5rem;
+		margin-bottom: 1.5rem;
+		overflow: hidden;
+		text-overflow: ellipsis;
+
+		p:last-child {
+			margin-bottom: 0;
+		}
+	}
+
+	.map-popup-type {
+		display: block;
 		margin-bottom: 1rem;
 	}
 
-	.project-link {
-		display: inline-block;
-		font-size: 1.2rem;
+	.map-popup-links {
+		margin-top: 1.5rem;
 		font-weight: bold;
 	}
 
-	.public-comment-btn {
-		padding-top: 8px;
+	.public-comment-button {
+		display: block;
 	}
 }
 
