--- a/modules/projects/client/views/projects-partials/projects-map-window.html
+++ b/modules/projects/client/views/projects-partials/projects-map-window.html
@@ -1,8 +1,15 @@
 
-<div class="map-info-popup">
+<div class="map-popup">
 	<h3>{{ parameter.name }}</h3>
-	<span class="project-type"><strong>Type:</strong> &nbsp;{{ parameter.type }}</span>
-	<pre class="project-desc" ng-if="parameter.description">{{ parameter.description | maxWords: 24 }}</pre>
-	<a ng-if="parameter.isOpen" href="p/{{parameter.code}}/commentperiod/{{parameter.period._id}}" class="btn btn-success public-comment-btn">Public Commenting Open - Click Here</a> 
-	<a class="project-link" ui-sref="p.detail({projectid: parameter.code })">View Project Details</a>	
+	<span class="map-popup-type"><strong>Type:</strong> &nbsp;{{ parameter.type }}</span>
+	<div class="map-popup-content" 
+		ng-if="parameter.description" 
+		ng-bind-html="parameter.description">
+	</div>
+	<a class="public-comment-btn btn btn-sm btn-success"
+		ng-if="parameter.isOpen" 
+		href="p/{{parameter.code}}/commentperiod/{{parameter.period._id}}">Public Commenting Open - Click Here</a>
+	<div class="map-popup-links"> 
+		<a ui-sref="p.detail({projectid: parameter.code })">View Project Details</a>
+	<div>
 </div>
