ESM-420 - Only display Open if a project has an Open Comment period.  Blank for all others.

--- a/modules/projects/client/views/projects-partials/projects-list.html
+++ b/modules/projects/client/views/projects-partials/projects-list.html
@@ -29,7 +29,7 @@
 				{{o.eacDecision}}
 			</td>
       <td header-class="'region-col'" data-title="'Comment Period'" filter="{openCommentPeriod:'select'}" filter-data="projectList.openPCPArray" sortable="'openCommentPeriod'">
-        {{o.openCommentPeriod ? 'Open' : 'Closed'}}
+        {{o.openCommentPeriod ? 'Open' : ''}}
       </td>
 		</tr>
 
